fixed issue of 100% window in desktop view covering the dropdown menus

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -250,7 +250,6 @@ a.ozp-icon:hover, a.ozp-icon:active {
 // @import '../app/home/home.less';
 
 .fullWidth {
-  z-index: 10000 !important;
   width: 100% !important;
   height: auto !important;
   left: 0 !important;
